--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
   },
   "dependencies": {
     "es6-promise": "^4.0.5"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
